--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ limits==5.6.0
 MarkupSafe==3.0.3
 ordered-set==4.1.0
 packaging==25.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+six==1.17.0
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.4
